--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1876,12 +1876,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>...</th>\n",
+       "      <th>State-gov</th>\n",
+       "      <th>State-gov</th>\n",
+       "      <th>Self-emp-not-inc</th>\n",
+       "      <th>Self-emp-not-inc</th>\n",
+       "      <th>Private</th>\n",
+       "      <th>Self-emp-inc</th>\n",
+       "      <th>Federal-gov</th>\n",
+       "      <th>Local-gov</th>\n",
+       "      <th>Without-pay</th>\n",
+       "      <th>Never-worked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39</td>\n",
+       "      <td>State-gov</td>\n",
+       "      <td>77516</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2174</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Self-emp-not-inc</td>\n",
+       "      <td>83311</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>215646</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>53</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>234721</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>338409</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age          workclass   fnlwgt   education-num       marital-status  \\\n",
+       "0   39          State-gov    77516              13        Never-married   \n",
+       "1   50   Self-emp-not-inc    83311              13   Married-civ-spouse   \n",
+       "2   38            Private   215646               9             Divorced   \n",
+       "3   53            Private   234721               7   Married-civ-spouse   \n",
+       "4   28            Private   338409              13   Married-civ-spouse   \n",
+       "\n",
+       "           occupation    relationship    race  sex   capital-gain  \\\n",
+       "0        Adm-clerical   Not-in-family   White    1           2174   \n",
+       "1     Exec-managerial         Husband   White    1              0   \n",
+       "2   Handlers-cleaners   Not-in-family   White    1              0   \n",
+       "3   Handlers-cleaners         Husband   Black    1              0   \n",
+       "4      Prof-specialty            Wife   Black    0              0   \n",
+       "\n",
+       "       ...        State-gov   State-gov Self-emp-not-inc  Self-emp-not-inc  \\\n",
+       "0      ...                0         1.0                0               0.0   \n",
+       "1      ...                0         0.0                0               1.0   \n",
+       "2      ...                0         0.0                0               0.0   \n",
+       "3      ...                0         0.0                0               0.0   \n",
+       "4      ...                0         0.0                0               0.0   \n",
+       "\n",
+       "    Private   Self-emp-inc   Federal-gov   Local-gov   Without-pay  \\\n",
+       "0       0.0            0.0           0.0         0.0           0.0   \n",
+       "1       0.0            0.0           0.0         0.0           0.0   \n",
+       "2       1.0            0.0           0.0         0.0           0.0   \n",
+       "3       1.0            0.0           0.0         0.0           0.0   \n",
+       "4       1.0            0.0           0.0         0.0           0.0   \n",
+       "\n",
+       "    Never-worked  \n",
+       "0            0.0  \n",
+       "1            0.0  \n",
+       "2            0.0  \n",
+       "3            0.0  \n",
+       "4            0.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' workclass'] == ' Never-worked':\n",
+    "        pd1.set_value(i, ' Never-worked', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Never-worked', 0)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1890,7 +2109,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' marital-status'] == ' Married-civ-spouse':\n",
+    "        pd1.set_value(i, ' Married-civ-spouse', 1)\n",
+    "    elif pd1.iloc[i][' workclass'] == ' ?':\n",
+    "        pd1.set_value(i, ' Married-civ-spouse', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Married-civ-spouse', 0)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1899,7 +2127,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' marital-status'] == ' Divorced':\n",
+    "        pd1.set_value(i, ' Divorced', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Divorced', 0)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1908,7 +2143,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' marital-status'] == ' Never-married':\n",
+    "        pd1.set_value(i, ' Never-married', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Never-married', 0)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1917,7 +2159,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' marital-status'] == ' Separated':\n",
+    "        pd1.set_value(i, ' Separated', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Separated', 0)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1926,7 +2175,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' marital-status'] == ' Widowed':\n",
+    "        pd1.set_value(i, ' Widowed', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Widowed', 0)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1935,7 +2191,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' marital-status'] == ' Married-spouse-absent':\n",
+    "        pd1.set_value(i, ' Married-spouse-absent', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Married-spouse-absent', 0)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1944,7 +2207,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' marital-status'] == ' Married-AF-spouse':\n",
+    "        pd1.set_value(i,  'Married-AF-spouse', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Married-AF-spouse', 0)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1953,7 +2223,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Tech-support':\n",
+    "        pd1.set_value(i, ' Tech-support', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Tech-support', 0)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1962,7 +2238,287 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Craft-repair':\n",
+    "        pd1.set_value(i, ' Craft-repair', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Craft-repair', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Other-service':\n",
+    "        pd1.set_value(i, ' Other-service', 1)\n",
+    "    elif pd1.iloc[i][' occupation'] == ' ?':\n",
+    "        pd1.set_value(i, ' Other-service', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Other-service', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Sales':\n",
+    "        pd1.set_value(i, ' Sales', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Sales', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Exec-managerial':\n",
+    "        pd1.set_value(i, ' Exec-managerial', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Exec-managerial', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Prof-specialty':\n",
+    "        pd1.set_value(i, ' Prof-specialty', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Prof-specialty', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Handlers-cleaners':\n",
+    "        pd1.set_value(i, ' Handlers-cleaners', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Handlers-cleaners', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Machine-op-inspct':\n",
+    "        pd1.set_value(i, ' Machine-op-inspct', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Machine-op-inspct', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Adm-clerical':\n",
+    "        pd1.set_value(i, ' Adm-clerical', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Adm-clerical', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Farming-fishing':\n",
+    "        pd1.set_value(i, ' Farming-fishing', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Farming-fishing', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Transport-moving':\n",
+    "        pd1.set_value(i, ' Transport-moving', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Transport-moving', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Priv-house-serv':\n",
+    "        pd1.set_value(i, ' Priv-house-serv', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Priv-house-serv', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Protective-serv':\n",
+    "        pd1.set_value(i, ' Protective-serv', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Protective-serv', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' occupation'] == ' Armed-Forces':\n",
+    "        pd1.set_value(i, ' Armed-Forces', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Armed-Forces', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' relationship'] == ' Husband':\n",
+    "        pd1.set_value(i, ' Husband', 1)\n",
+    "    elif pd1.iloc[i][' occupation'] == ' ?':\n",
+    "        pd1.set_value(i, ' Husband', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Husband', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' relationship'] == ' Wife':\n",
+    "        pd1.set_value(i, ' Wife', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Wife', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' relationship'] == ' Own-child':\n",
+    "        pd1.set_value(i, ' Own-child', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Own-child', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' relationship'] == ' Not-in-family':\n",
+    "        pd1.set_value(i, ' Not-in-family', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Not-in-family', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' relationship'] == ' Other-relative':\n",
+    "        pd1.set_value(i, ' Other-relative', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Other-relative', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in pd1.index.values.tolist():\n",
+    "    if pd1.iloc[i][' relationship'] == ' Unmarried':\n",
+    "        pd1.set_value(i, ' Unmarried', 1)\n",
+    "    else:\n",
+    "        pd1.set_value(i, ' Unmarried', 0)"
+   ]
   },
   {
    "cell_type": "code",
